[tool.poetry]
name = "qmkjuselara"
version = "0.1.0"
description = "QMK setup for my keyboards"
authors = ["Juan Lara <julara@unal.edu.co>"]

[tool.poetry.dependencies]
python = ">3.8"
qmk = "^1.1.1"

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
